--- a/include/articles/tema_amoroso_3.html
+++ b/include/articles/tema_amoroso_3.html
@@ -17,6 +17,13 @@
 							"Dichiaro! Vi è qui un uomo di ottusa scempiaggine, senza nemmeno un tetto per proteggersi da pioggia e rugiada... Se vi andasse bene ugualmente, vi prego, entrate."
 						</div>
 						<div class="person"></div>
+						<div class="media">
+							<audio controls preload="metadata">
+								<source src="../media/audio/test.mp3" type="audio/mpeg">
+								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
+							</audio>
+							<p class="didascalia">culokawa</p>
+						</div>
 						<p>L'altra citazione invece è dello stesso Jiro, che confessa alla sorella Kayo, nel frattempo diventata medico, di aver compreso pienamente la gravità della situazione di Nahoko:</p>
 						<div class="quote">
 							"Noialtri viviamo ogni giorno come un dono, facendo grande tesoro di ogni momento."
@@ -32,6 +39,13 @@
 							"Lei voleva mostrarsi al suo amato soltanto nei momenti più belli..."
 						</div>
 						<div class="person"></div>
+						<div class="media">
+							<audio controls preload="metadata">
+								<source src="../media/audio/test.mp3" type="audio/mpeg">
+								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
+							</audio>
+							<p class="didascalia">signora culokawa</p>
+						</div>
 						<p>È quello stesso vento che li ha fatti incontrare infine a portare la brutta notizia a Jiro, il quale sta assistendo al volo di prova del suo primo prototipo di "Zero". Una folata leggera come la sua dolce metà gli annuncia idealmente che Nahoko non c'è più, una notizia che ammutolisce persino il comparto sonoro del film, il quale ci fa sentire soltanto il fruscio del vento.</p>
 						<p>Ritroviamo poi nell'ultima scena Jiro in compagnia del Conte Caproni, nel mondo dei loro sogni, tristemente decorato dalle carcasse dei suoi stessi aerei. Il nostro protagonista è visibilmente affranto, ma quando rivede Nahoko che lo esorta ad andare avanti trova la forza di sorridere, sostenuto per l'ultima volta dalla sua amata moglie.</p>
 						<div class="media">
