--- a/include/articles/tema_politico.html
+++ b/include/articles/tema_politico.html
@@ -16,7 +16,8 @@
 						<p>Ciò che colpisce maggiormente della scena dei tre bambini è la forte valenza simbolica che assume la figura della sorellina che, per cause di forza maggiore, è già costretta a diventare una "giovane adulta". Porta infatti sulle spalle il più piccolo dei fratellini cullandolo dolcemente, mentre tiene a bada l'altro dissuadendolo dalla tentazione di accettare l'offerta di Jiro, ai loro occhi un semplice sconosciuto ben vestito.</p>
 						<p>Ancora una volta assistiamo al potere evocativo dei disegni firmati studio Ghibli: persino i bambini stringevano la cinghia soffrendo la fame e la povertà mentre il governo pensava soltanto a costruire e a vendere aerei da guerra senza considerare le conseguenze che può avere un'infanzia passata ad improvvisarsi adulti, questa volta però non per gioco, senza che nessuno ti spieghi le regole. Lo sguardo della piccola poi è particolarmente commovente: un misto di tristezza e rassegnazione, lo sguardo di chi non può far altro che farsi trascinare dal flusso degli eventi circostanti, senza nemmeno sapere esattamente il motivo.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt="test"></a>
+							<p class="didascalia">siberia</p>
 						</div>
 						<p class="curiosita"><b>Curiosità:</b> Avendo provato a replicare in casa il Siberia, posso affermare che personalmente l'offerta di Jiro l'avrei accettata senza esitazione!</p>
 						<div class="colonne clearfix">
