--- a/include/articles/tema_storico_3.html
+++ b/include/articles/tema_storico_3.html
@@ -11,7 +11,7 @@
 						</div>
 						<p>Decide quindi di riassumere brevemente a Jiro (e allo spettatore al tempo stesso) il quadro della situazione politica e militare del Giappone, e di come questa stia precipitando proprio come un caccia in picchiata pronto all'attacco. Lo fa usando delle parole che suonano come una condanna:</p>
 						<div class="quote">"Il Giappone scoppierà... anche la Germania scoppierà."</div>
-						<div class="person"></div>
+						<div class="person">&mdash; Hans Castorp</div>
 						<p>Il modo in cui il regista tratta questo pezzo di storia nipponica ha causato forti polemiche in patria e non solo, ma ne parleremo più a fondo nel capitolo dedicato alla critica.</p>
 						<div class="media">
 							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
