--- a/include/menu.html
+++ b/include/menu.html
@@ -5,30 +5,31 @@
 					<div class="navmenu">
 						<nav>
 							<ul>
+							<div class="navspazio">&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;</div>
 								<li id="menu-home"><a href="index">Home</a></li>
-									<ul class="submenu">
+									<ul class="submenu sm1">
 										<li id="menu-prefazione"><a href="prefazione">Prefazione</a></li>
 										<li id="menu-intro"><a href="introduzione">Introduzione</a></li>
 									</ul>
 								<li id="menu-storico"><a href="tema_storico">Il tema storico</a></li>
-									<ul class="submenu">
+									<ul class="submenu sm2">
 										<li id="menu-storico1"><a href="tema_storico_1">Il setting storico e il terremoto</a></li>
 										<li id="menu-storico2"><a href="tema_storico_2">La crisi economica</a></li>
 										<li id="menu-storico3"><a href="tema_storico_3">La Germania nazista e la Gestapo</a></li>
 										<li id="menu-storico4"><a href="tema_storico_4">Le conseguenze della guerra</a></li>
 									</ul>
 								<li id="menu-politico"><a href="tema_politico">Il tema politico-sociale</a></li>
-									<ul class="submenu">
+									<ul class="submenu sm3">
 										<li id="menu-politico1"><a href="tema_politico_1">Le diverse facce della crisi</a></li>
 									</ul>
 								<li id="menu-amoroso"><a href="tema_amoroso">Il tema amoroso</a></li>
-									<ul class="submenu">
+									<ul class="submenu sm4">
 										<li id="menu-amoroso1"><a href="tema_amoroso_1">Il primo incontro</a></li>
 										<li id="menu-amoroso2"><a href="tema_amoroso_2">Il ruolo del vento tra Jiro e Nahoko</a></li>
 										<li id="menu-amoroso3"><a href="tema_amoroso_3">Il matrimonio</a></li>
 									</ul>
 								<li id="menu-miyazaki"><a href="miyazaki">Miyazaki nel film</a></li>
-									<ul class="submenu">
+									<ul class="submenu sm5">
 										<li id="menu-miyazaki1"><a href="miyazaki_1">Elementi che hanno ispirato il film</a></li>
 										<li id="menu-miyazaki2"><a href="miyazaki_2">Il doppiaggio e Hideaki Anno</a></li>
 										<li id="menu-miyazaki3"><a href="miyazaki_3">Il sogno maledetto di Jiro e Miyazaki</a></li>
@@ -37,20 +38,23 @@
 										<li id="menu-miyazaki6"><a href="miyazaki_6">Un'ancora di salvezza per il cuore</a></li>
 									</ul>
 								<li id="menu-critica"><a href="critica">La critica</a></li>
-									<ul class="submenu">
+									<ul class="submenu sm6">
 										<li id="menu-critica1"><a href="critica_1">Il polverone politico</a></li>
 										<li id="menu-critica2"><a href="critica_2">Le "scene inutili"</a></li>
 									</ul>
 								<li id="menu-considerazioni"><a href="considerazioni">Considerazioni personali</a></li>
-									<ul class="submenu">
+									<ul class="submenu sm7">
 										<li id="menu-considerazioni1"><a href="considerazioni_1">La caratterizzazione dei personaggi</a></li>
 										<li id="menu-considerazioni2"><a href="considerazioni_2">I bambini e la domanda "Perché?"</a></li>
 										<li id="menu-considerazioni3"><a href="considerazioni_3">L'arte che fa conoscere sè stessi</a></li>
 									</ul>
+									<div class="navspazio">&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;</div>
 								<li id="menu-casttecnico"><a href="cast_tecnico">Cast tecnico dello Studio</a></li>
 								<li id="menu-bluray"><a href="bluray">Edizione Blu-ray</a></li>
 								<li id="menu-soundtrack"><a href="soundtrack">Colonna sonora</a></li>
+								<div class="navspazio">&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;</div>
 								<li id="menu-credits"><a href="credits">Credits</a></li>
+								<div class="navspazio">&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;</div>
 							</ul>
 							<img id="logoghibli" src="../assets/logo_ghibli.png" alt="Studio Ghibli">
 						</nav>
