--- a/include/articles/miyazaki_5.html
+++ b/include/articles/miyazaki_5.html
@@ -35,7 +35,7 @@
 						<div class="media">
 							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
 						</div>
-						<p>Nel documentario "The Kingdom of Dreams and Madness" infatti ci viene raccontato di come Takahata trovò il suo primo impiego alla Toei Animation, e di come Miyazaki si unì a lui quattro anni dopo; fu così che ebbe inizio il binomio che condusse alla creazione dello Studio Ghibli.</p>
+						<p>Nel documentario <i>"The Kingdom of Dreams and Madness"</i> infatti ci viene raccontato di come Takahata trovò il suo primo impiego alla Toei Animation, e di come Miyazaki si unì a lui quattro anni dopo; fu così che ebbe inizio il binomio che condusse alla creazione dello Studio Ghibli.</p>
 						<p>È possibile che il punto d'incontro tra i binomi Jiro-Honjo e Miyazaki-Takahata sia "soltanto" questo, ma posso sicuramente capire perchè <i>"Si Alza il Vento"</i> abbia fatto versare qualche lacrima al maestro. Risulta evidente che in questa pellicola Miyazaki abbia riversato davvero tutto sé stesso, e ci terrei a ringraziarlo personalmente per aver condiviso gran parte della sua storia personale con tutto il suo pubblico. Non dev'essere stato per niente facile.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
