--- a/include/articles/tema_storico_1.html
+++ b/include/articles/tema_storico_1.html
@@ -11,7 +11,15 @@
 						<div class="media">
 							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
 						</div>
-						<p>Il grande maestro sceglie di rappresentare il sisma poco dopo aver inserito la battuta principale del film: "Si alza il vento, bisogna tentare di vivere...", che anticipa la distruzione causata dalla calamità, la quale irrompe violentemente su schermo anche in termini sonori: passiamo infatti dal silenzio e dalla tranquillità delle verdi campagne giapponesi, alla possente "voce" della terra che trema; i numerosi effetti sonori che seguono (anch'essi realizzati con voci umane), accompagnano i movimenti ondulati del terreno, contribuendo attivamente ad aumentare il livello di tensione generale. In seguito ci vengono mostrati gli effetti concreti del terremoto: case distrutte, frane, danni alla rete elettrica.</p>
+						<p>Il grande maestro sceglie di rappresentare il sisma poco dopo aver inserito la battuta principale del film: "Si alza il vento, bisogna tentare di vivere...", che anticipa la distruzione causata dalla calamità, la quale irrompe violentemente su schermo anche in termini sonori: passiamo infatti dal silenzio e dalla tranquillità delle verdi campagne giapponesi, alla possente "voce" della terra che trema; i numerosi effetti sonori che seguono (anch'essi realizzati con voci umane), accompagnano i movimenti ondulati del terreno, contribuendo attivamente ad aumentare il livello di tensione generale.</p>
+						<div class="media">
+							<audio controls preload="metadata">
+								<source src="../media/audio/test.mp3" type="audio/mpeg">
+								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
+							</audio>
+							<p class="didascalia">terrachetrema</p>
+						</div>
+						<p>In seguito ci vengono mostrati gli effetti concreti del terremoto: case distrutte, frane, danni alla rete elettrica.</p>
 						<div class="media">
 							<video controls preload="metadata">
 								<source src="../media/video/trailer.mp4" type="video/mp4">
